--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   <nav>
     <!-- I hope you like my page! I'm very excited about this opportunity at ShopStorm-->
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">JESSICA COTZIN | <a href="jessicacotzin.com">www.jessicacotzin.com</a>
+      <a href="jessicacotzin.com" class="brand-logo">JESSICA COTZIN</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">WEB DEVELOPER</a></li>
         <li><span style="color:#2196f3 ">+</span></a></li>
