changed icons a bit

--- a/home.html
+++ b/home.html
@@ -15,7 +15,14 @@
   <nav>
     <!-- I hope you like my page! I'm very excited about this opportunity at ShopStorm-->
     <div class="nav-wrapper">
-      <a href="jessicacotzin.com" class="brand-logo">JESSICA COTZIN</a>
+      <a href="http://jessicacotzin.com" class="brand-logo">JESSICA COTZIN |</a>
+      <div class="contact-icons">
+  <a href="https://www.facebook.com/4ssej" target="_blank" title="Facebook"><i class="fa fa-facebook-square" aria-hidden="true">&emsp;</i></a>
+  <a href="https://www.instagram.com/dawarriorsince1987/" target="_blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true">&emsp;</i></a>
+  <a href="https://www.linkedin.com/in/jessica-cotzin-6b614a8a
+" target="_blank" title="Linkedin"><i class="fa fa-linkedin-square" aria-hidden="true">&emsp;</i></a>
+  <a href="https://github.com/jcotzin" target="_blank" title="Github"><i class="fa fa-github" aria-hidden="true">&emsp;</i></a>
+</div>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">WEB DEVELOPER</a></li>
         <li><span style="color:#2196f3 ">+</span></a></li>
